--- a/fansite1.css
+++ b/fansite1.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    font-family: "Fira Sans", sans-serif;
+    font-family: "Bebas Neue", serif;
     font-style: normal;
     color: whitesmoke;
     position: relative;
@@ -25,7 +25,7 @@ body{
 }
 .navbar ul li a{
     color: white;
-    font-size: 1.3em;
+    font-size: 2.3em;
     list-style-type: none;
     text-decoration: none;
 }
@@ -46,7 +46,7 @@ body{
 }
 .sousnavbar ul li a{
     color: white;
-    font-size: 1em;
+    font-size: 1.3em;
     list-style-type: none;
     text-decoration: none;
 }
@@ -66,7 +66,7 @@ body{
 }
 .navbar2 ul li a{
     color: white;
-    font-size: 0.8em;
+    font-size: 1em;
     list-style-type: none;
     text-decoration: none;
 }
@@ -136,6 +136,7 @@ body{
     .reseau{
         flex-wrap: wrap;
         width: 100%;
+        gap: 10%;
     }
 }
 
@@ -176,18 +177,20 @@ p{
     width: 60%;
     margin-left: 2.5em;
     margin-bottom: 4em;
-    font-size: 1.5em;
+    font-size: 1.8em;
 }
 
 h2{
     display: flex;
     justify-content: center;
-    margin-bottom: 2em;
+    margin-bottom: 1.7em;
+    font-size: 2.5em;
 }
 h3{
     display: flex;
     justify-content: center;
     margin-top: 0.5em;
+    font-size: 1.8em;
 }
 
 .Discog{
@@ -243,10 +246,15 @@ h3{
     justify-content: space-around;
 }
 
+#pres{
+    font-size: 1.3em;
+}
+
 p{
     margin-top: 1em;
     width: 80%;
     text-align: center;
+    font-size: 1.4em;
 }
 .Accor{
     display: flex;
@@ -322,5 +330,5 @@ p{
     align-items: center;
 }
 .res{
-    width: 6em;
+    width: 5em;
 }
